--- a/src/app/components/leaderboard/leaderboard.component.html
+++ b/src/app/components/leaderboard/leaderboard.component.html
@@ -102,82 +102,80 @@
 
   <!-- Table Section -->
   <div class="bg-white rounded-xl shadow-lg overflow-hidden border border-gray-100 mb-20 md:mb-0">
-    <div class="table-horizontal-scroll">
-      <div class="mobile-scroll">
-        <table mat-table [dataSource]="filteredData" class="w-full">
-          <!-- Rank Column -->
-          <ng-container matColumnDef="rank">
-            <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600">#</th>
-            <td mat-cell *matCellDef="let catch; let i = index" class="p-4">
-              <span class="rank-cell">
-                <span [ngClass]="{
-                  'medal-emoji': i === 0 || i === 1 || i === 2
-                }">
-                  <ng-container *ngIf="i === 0">🥇</ng-container>
-                  <ng-container *ngIf="i === 1">🥈</ng-container>
-                  <ng-container *ngIf="i === 2">🥉</ng-container>
-                  <ng-container *ngIf="i > 2">{{i + 1}}</ng-container>
-                </span>
+    <div class="max-h-[500px] overflow-auto mobile-scroll">
+      <table mat-table [dataSource]="filteredData" class="w-full">
+        <!-- Rank Column -->
+        <ng-container matColumnDef="rank">
+          <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600">#</th>
+          <td mat-cell *matCellDef="let catch; let i = index" class="p-4">
+            <span class="rank-cell">
+              <span [ngClass]="{
+                'medal-emoji': i === 0 || i === 1 || i === 2
+              }">
+                <ng-container *ngIf="i === 0">🥇</ng-container>
+                <ng-container *ngIf="i === 1">🥈</ng-container>
+                <ng-container *ngIf="i === 2">🥉</ng-container>
+                <ng-container *ngIf="i > 2">{{i + 1}}</ng-container>
               </span>
-            </td>
-          </ng-container>
+            </span>
+          </td>
+        </ng-container>
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="userName">
-            <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600"> Angler </th>
-            <td mat-cell *matCellDef="let catch" class="p-4">
-              <div class="avatar-name-cell">
-                <img
-                  [src]="getAvatarUrl(catch.user.userId)"
-                  [alt]="catch.user.userName"
-                  class="avatar-mini"
-                />
-                <span class="avatar-username">{{catch.user.userName}}</span>
-              </div>
-            </td>
-          </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="userName">
+          <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600"> Angler </th>
+          <td mat-cell *matCellDef="let catch" class="p-4">
+            <div class="avatar-name-cell">
+              <img
+                [src]="getAvatarUrl(catch.user.userId)"
+                [alt]="catch.user.userName"
+                class="avatar-mini"
+              />
+              <span class="avatar-username">{{catch.user.userName}}</span>
+            </div>
+          </td>
+        </ng-container>
 
-          <!-- Fish Type Column -->
-          <ng-container matColumnDef="fishType">
-            <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600"> Species </th>
-            <td mat-cell *matCellDef="let catch" class="p-4"> {{catch.fishType}} </td>
-          </ng-container>
+        <!-- Fish Type Column -->
+        <ng-container matColumnDef="fishType">
+          <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600"> Species </th>
+          <td mat-cell *matCellDef="let catch" class="p-4"> {{catch.fishType}} </td>
+        </ng-container>
 
-          <!-- Weight Column -->
-          <ng-container matColumnDef="fishWeight">
-            <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600">
-              Weight
-            </th>
-            <td mat-cell *matCellDef="let catch" class="p-4"> {{catch.fishWeight}} kg </td>
-          </ng-container>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="fishWeight">
+          <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600">
+            Weight
+          </th>
+          <td mat-cell *matCellDef="let catch" class="p-4"> {{catch.fishWeight}} kg </td>
+        </ng-container>
 
-          <!-- Length Column -->
-          <ng-container matColumnDef="fishLength">
-            <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600"> 
-              Length
-            </th>
-            <td mat-cell *matCellDef="let catch" class="p-4"> {{catch.fishLength}} cm </td>
-          </ng-container>
+        <!-- Length Column -->
+        <ng-container matColumnDef="fishLength">
+          <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600"> 
+            Length
+          </th>
+          <td mat-cell *matCellDef="let catch" class="p-4"> {{catch.fishLength}} cm </td>
+        </ng-container>
 
-          <!-- Bait Column -->
-          <ng-container matColumnDef="bait">
-            <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600"> Bait </th>
-            <td mat-cell *matCellDef="let catch" class="p-4"> {{catch.bait}} </td>
-          </ng-container>
+        <!-- Bait Column -->
+        <ng-container matColumnDef="bait">
+          <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600"> Bait </th>
+          <td mat-cell *matCellDef="let catch" class="p-4"> {{catch.bait}} </td>
+        </ng-container>
 
-          <!-- Date Column -->
-          <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600">
-              Date
-            </th>
-            <td mat-cell *matCellDef="let catch" class="p-4 text-gray-500"> {{catch.date | date:'MMM d, y'}} </td>
-          </ng-container>
+        <!-- Date Column -->
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef class="text-left p-4 font-medium text-gray-600">
+            Date
+          </th>
+          <td mat-cell *matCellDef="let catch" class="p-4 text-gray-500"> {{catch.date | date:'MMM d, y'}} </td>
+        </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" class="bg-gray-50"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index" 
-              class="border-t border-gray-100 hover:bg-gray-50 transition-colors duration-150"></tr>
-        </table>
-      </div>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" class="bg-gray-50"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index" 
+            class="border-t border-gray-100 hover:bg-gray-50 transition-colors duration-150"></tr>
+      </table>
     </div>
   </div>
 </div>
